<resources>
    <string name="app_name">KM-Browser</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="history">History</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="url">TypeURL</string>
    <string name="help">Help and feedback</string>
    <string name="recent">Recent tabs</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="download">Downloads</string>
    <string name="newtab">Newtab</string>
    <string name="mic">Google-Voice-Search</string>
    <string name="stop">StopLoading</string>
    <string name="user">Kapil Gehlot</string>
    <string name="email">kapil.nituk@gmail.com</string>
    <string name="abouttext">This android application (KM-Browser) is developed by Kapil Gehlot Computer Science student at National Institute
    of Technology Uttarakahnd.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nContact:\nEmail-id : kapil.nituk@gmail.com \nMobile no. :9690148808</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="default_value_browser">0</string>
    <string name="pref_title_default_browser">Choose your default search-engine</string>
<string name="id">1750334451866694</string>
    <string-array name="pref_default_browser_list_titles">
        <item>Bing</item>
        <item>Google</item>
        <item>Yahoo</item>
    </string-array>
    <string-array name="pref_history_list_titles">

    </string-array>

    <string-array name="pref_history_list_values">
    </string-array>
    <string-array name="pref_default_browser_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
