<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@mipmap/http"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_next_btn"
        android:orderInCategory="100"
        android:title="@string/next"
        android:icon="@mipmap/next"
        app:showAsAction="always" />
    <item
        android:id="@+id/history"
        android:orderInCategory="100"
        android:title="@string/history"

        app:showAsAction="never" />
    <item
        android:id="@+id/download"
        android:orderInCategory="100"
        android:title="@string/download"

        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"
        android:icon="@mipmap/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/newtab"
        android:orderInCategory="100"
        android:title="@string/mic"
        android:icon="@mipmap/mic"
        app:showAsAction="always" />
    <item
        android:id="@+id/stop"
        android:orderInCategory="100"
        android:title="@string/stop"
        android:icon="@mipmap/stop"
        app:showAsAction="always" />


    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />


</menu>
